Use toList() stream method